--- a/features/template-userstyle.user.css
+++ b/features/template-userstyle.user.css
@@ -12,7 +12,7 @@
 @-moz-document domain("youtube.com") {
     /* Variables */
     i=!important;
-    t=!transparent;
+    t=transparent;
     
     /* 
         ...
